step-registry: reference images from `stable`

--- a/ci-operator/step-registry/ipi/deprovision/artifacts/artifacts/ipi-deprovision-artifacts-artifacts-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/artifacts/ipi-deprovision-artifacts-artifacts-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-deprovision-artifacts-artifacts
-  from: cli
+  from: stable:cli
   commands: ipi-deprovision-artifacts-artifacts-commands.sh
   resources:
     requests:
