--- a/ci-operator/step-registry/ipi/deprovision/artifacts/bootstrap/ipi-deprovision-artifacts-bootstrap-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/bootstrap/ipi-deprovision-artifacts-bootstrap-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-deprovision-artifacts-bootstrap
-  from: "TODO(skuznets): need an image with ssh+jq+curl"
+  from: stable:cli # TODO(skuznets): need an image with ssh+jq+curl
   commands: ipi-deprovision-artifacts-bootstrap-commands.sh
   resources:
     requests:
