--- a/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-deprovision-artifacts-must-gather
-  from: cli
+  from: stable:cli
   commands: ipi-deprovision-artifacts-must-gather-commands.sh
   resources:
     requests:
