--- a/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-deprovision-deprovision
-  from: installer
+  from: stable:installer
   commands: ipi-deprovision-deprovision-commands.sh
   resources:
     requests:
