--- a/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-install-install
-  from: installer
+  from: stable:installer
   commands: ipi-install-install-commands.sh
   resources:
     requests:
