--- a/ci-operator/step-registry/ipi/install/rbac/ipi-install-rbac-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/rbac/ipi-install-rbac-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-install-rbac
-  from: cli
+  from: stable:cli
   commands: ipi-install-rbac-commands.sh
   resources:
     requests:
