Updating deployment config for bastion Z

--- a/core-services/sshd-bastion/z/deployment.yaml
+++ b/core-services/sshd-bastion/z/deployment.yaml
@@ -14,9 +14,12 @@ items:
       app: prow
       component: sshd
     ports:
-    - name: main
-      port: 80
-      targetPort: main
+    - name: api
+      port: 6443
+      targetPort: api
+    - name: libvirt
+      port: 16509
+      targetPort: libvirt
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -52,8 +55,10 @@ items:
           ports:
             - name: ssh
               containerPort: 2222
-            - name: main
-              containerPort: 8080
+            - name: api
+              containerPort: 6443
+            - name: libvirt
+              containerPort: 16509
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
