Adding additional ports for http(s) traffic for bastion-z

--- a/core-services/sshd-bastion/z/deployment.yaml
+++ b/core-services/sshd-bastion/z/deployment.yaml
@@ -20,6 +20,12 @@ items:
     - name: libvirt
       port: 16509
       targetPort: libvirt
+    - name: http
+      port: 80
+      targetPort: http
+    - name: https
+      port: 443
+      targetPort: https
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -59,6 +65,10 @@ items:
               containerPort: 6443
             - name: libvirt
               containerPort: 16509
+            - name: http
+              containerPort: 8080
+            - name: https
+              containerPort: 8443
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
