--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -188,7 +188,7 @@ bugzilla:
               validate_by_default: true
 cat: {}
 cherry_pick_unapproved:
-  branchregexp: ^release-(3|4\.[^3]).*$
+  branchregexp: ^release-.*$
   comment: This PR is not for the master branch but does not have the `cherry-pick-approved`  label.
     Adding the `do-not-merge/cherry-pick-not-approved`  label.
 config_updater:
