--- a/core-services/base-ci-images/images-ocp.yaml
+++ b/core-services/base-ci-images/images-ocp.yaml
@@ -101,6 +101,14 @@ spec:
       scheduled: true
     referencePolicy:
       type: Local
+  - name: golang-1.13
+    from:
+      kind: DockerImage
+      name: docker.io/openshift/origin-release:golang-1.13
+    importPolicy:
+      scheduled: true
+    referencePolicy:
+      type: Local
 
   - name: rhel-golang-1.11
     from:
