Fix ln -s params

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -505,9 +505,9 @@ periodics:
                   if ! grep -q glusterfs-fuse /tmp/packages; then yumdownloader -y --disablerepo=* --enablerepo=rhel-8* --destdir=/tmp/rpms glusterfs glusterfs-client-xlators glusterfs-fuse glusterfs-libs psmisc; fi && \\
                   cd /tmp/working && \\
                   for i in \$(find /tmp/rpms/ -name *.rpm); do echo "Extracting \$i ..."; rpm2cpio \$i | cpio -div; done && \\
-                  ln -s usr/sbin/iptables /usr/sbin/xtables-nft-multi && \\
-                  ln -s usr/sbin/iptables-save /usr/sbin/xtables-nft-multi && \\
-                  ln -s usr/sbin/iptables-restore /usr/sbin/xtables-nft-multi && \\
+                  ln -s /usr/sbin/xtables-nft-multi usr/sbin/iptables && \\
+                  ln -s /usr/sbin/xtables-nft-multi usr/sbin/iptables-save && \\
+                  ln -s /usr/sbin/xtables-nft-multi usr/sbin/iptables-restore && \\
                   mv etc usr/ && mv sbin/* usr/sbin/ && rm -rf sbin/ && \\
                   coreos-assembler dev-overlay --repo /srv/repo --rev "${ostree_ref}" --add-tree /tmp/working --output-ref "${ostree_ref}"
 
