--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.1.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.1.yaml
@@ -14,7 +14,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: installer
 - dockerfile_path: images/installer-artifacts/Dockerfile.rhel
@@ -22,7 +22,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: installer-artifacts
 - dockerfile_path: images/nested-libvirt/Dockerfile
@@ -30,7 +30,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   optional: true
   to: libvirt-installer
@@ -39,7 +39,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: upi-installer
 - dockerfile_path: images/openstack/Dockerfile.ci
@@ -47,7 +47,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   optional: true
   to: openstack-installer
