--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.3.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.3.yaml
@@ -14,7 +14,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: installer
 - dockerfile_path: images/installer-artifacts/Dockerfile.rhel
@@ -22,7 +22,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: installer-artifacts
 - dockerfile_path: images/nested-libvirt/Dockerfile
@@ -30,7 +30,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: libvirt-installer
 - dockerfile_path: images/installer/Dockerfile.upi.ci
@@ -38,7 +38,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: upi-installer
 - dockerfile_path: images/openstack/Dockerfile.ci
@@ -46,7 +46,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: openstack-installer
 - dockerfile_path: images/baremetal/Dockerfile.ci
@@ -54,7 +54,7 @@ images:
   inputs:
     root:
       as:
-      - build
+      - builder
       paths: null
   to: baremetal-installer
 promotion:
