Enable lifecycle management in openshift/release

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -164,6 +164,7 @@ periodics:
         repo:operator-framework/operator-sdk
         repo:tnozicka/openshift-acme
         repo:openshift/openshift-azure
+        repo:openshift/release
         -label:lifecycle/frozen
         label:lifecycle/rotten
       - --updated=720h
@@ -210,6 +211,7 @@ periodics:
         repo:operator-framework/operator-sdk
         repo:tnozicka/openshift-acme
         repo:openshift/openshift-azure
+        repo:openshift/release
         -label:lifecycle/frozen
         label:lifecycle/stale
         -label:lifecycle/rotten
@@ -260,6 +262,7 @@ periodics:
         repo:operator-framework/operator-sdk
         repo:tnozicka/openshift-acme
         repo:openshift/openshift-azure
+        repo:openshift/release
         -label:lifecycle/frozen
         -label:lifecycle/stale
         -label:lifecycle/rotten
