Fix image replacement for builder stage in Installer presubmits
The stage in the referenced Dockerfiles is `builder`, not `build`.

--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -313,23 +313,23 @@ presubmits:
         - name: CONFIG_SPEC
           value: |
             tag_specification:
-              name: '4.0'
+              name: '4.4'
               namespace: ocp
-            build_root:
-              image_stream_tag:
-                cluster: https://api.ci.openshift.org
-                name: release
-                namespace: openshift
-                tag: golang-1.10
             base_images:
               base:
-                name: '4.0'
+                name: '4.4'
                 namespace: ocp
                 tag: base
               machine-os-content:
                 name: machine-os-content
                 namespace: rhcos
                 tag: latest
+            build_root:
+              image_stream_tag:
+                cluster: https://api.ci.openshift.org
+                name: release
+                namespace: openshift
+                tag: golang-1.13
             canonical_go_repository: github.com/openshift/installer
             images:
             - dockerfile_path: images/installer/Dockerfile.ci
@@ -337,7 +337,7 @@ presubmits:
               inputs:
                 root:
                   as:
-                  - build
+                  - builder
               to: installer
             raw_steps:
             - output_image_tag_step:
