--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -73,6 +73,12 @@ resources:
     requests:
       cpu: "3"
       memory: 5Gi
+  govet:
+    limits:
+      memory: 9Gi
+    requests:
+      cpu: "3"
+      memory: 5Gi
   installer:
     limits:
       memory: 9Gi
