--- a/ci-operator/config/openshift/cluster-kube-controller-manager-operator/openshift-cluster-kube-controller-manager-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-kube-controller-manager-operator/openshift-cluster-kube-controller-manager-operator-master.yaml
@@ -11,7 +11,11 @@ build_root:
     tag: golang-1.13
 images:
 - dockerfile_path: Dockerfile.rhel7
-  from: bin
+  from: base
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
   to: cluster-kube-controller-manager-operator
 promotion:
   name: "4.4"
