Use canonical_go_repository in openshift-priv fork

--- a/ci-operator/config/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master.yaml
+++ b/ci-operator/config/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master.yaml
@@ -25,6 +25,7 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.12
+canonical_go_repository: "github.com/openshift/origin"
 images:
 - dockerfile_path: images/hyperkube/Dockerfile.rhel
   from: base
