--- a/ci-operator/jobs/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master-presubmits.yaml
@@ -13,6 +13,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-aws
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-aws
     spec:
       containers:
@@ -91,6 +92,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-aws-disruptive
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-aws-disruptive
     spec:
       containers:
@@ -170,6 +172,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-aws-image-registry
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-aws-image-registry
     spec:
       containers:
@@ -248,6 +251,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-aws-jenkins
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-aws-jenkins
     spec:
       containers:
@@ -326,6 +330,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-aws-serial
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-aws-serial
     spec:
       containers:
@@ -404,6 +409,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-azure
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-azure
     spec:
       containers:
@@ -482,6 +488,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-cmd
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-cmd
     spec:
       containers:
@@ -562,6 +569,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-conformance-k8s
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-conformance-k8s
     spec:
       containers:
@@ -640,6 +648,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-gcp
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-gcp
     spec:
       containers:
@@ -720,6 +729,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-gcp-builds
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-gcp-builds
     spec:
       containers:
@@ -800,6 +810,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-gcp-image-ecosystem
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-gcp-image-ecosystem
     spec:
       containers:
@@ -880,6 +891,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-gcp-upgrade
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-gcp-upgrade
     spec:
       containers:
@@ -947,6 +959,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-e2e-vsphere
+    path_alias: github.com/openshift/origin
     rerun_command: /test e2e-vsphere
     spec:
       containers:
@@ -1025,6 +1038,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-images
+    path_alias: github.com/openshift/origin
     rerun_command: /test images
     spec:
       containers:
@@ -1081,6 +1095,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-launch-vsphere
+    path_alias: github.com/openshift/origin
     rerun_command: /test launch-vsphere
     spec:
       containers:
@@ -1159,6 +1174,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-unit
+    path_alias: github.com/openshift/origin
     rerun_command: /test unit
     spec:
       containers:
@@ -1215,6 +1231,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-priv-ci-experiment-origin-master-verify
+    path_alias: github.com/openshift/origin
     rerun_command: /test verify
     spec:
       containers:
