Fix oc builders for remaining images to use CI image

--- a/ci-operator/config/openshift/oc/openshift-oc-master.yaml
+++ b/ci-operator/config/openshift/oc/openshift-oc-master.yaml
@@ -45,14 +45,29 @@ images:
 - context_dir: images/deployer/
   dockerfile_path: Dockerfile.rhel
   from: cli
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      paths: null
   to: deployer
 - context_dir: .
   dockerfile_path: images/cli-artifacts/Dockerfile.rhel
   from: cli
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      paths: null
   to: cli-artifacts
 - context_dir: images/recycler/
   dockerfile_path: Dockerfile.rhel
   from: cli
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      paths: null
   to: recycler
 promotion:
   additional_images:
