Enable performance-addon-operators repo.
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -630,6 +630,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift-kni/performance-addon-operators
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -824,6 +825,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift-kni/performance-addon-operators
   - includedBranches:
     - release-4.3
     labels:
@@ -1075,6 +1077,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift-kni/performance-addon-operators
   - labels:
     - lgtm
     - approved
