--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -97,6 +97,9 @@ approve:
 - repos:
   - openshift/hypershift-toolkit
   require_self_approval: false
+- repos:
+  - openshift-kni/performance-addon-operators
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1046,6 +1049,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  openshift-kni/performance-addon-operators:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   openshift-priv:
   - endpoint: http://refresh
     events:
@@ -1174,6 +1192,9 @@ lgtm:
   review_acts_as_lgtm: true
 - repos:
   - openshift/hypershift-toolkit
+  review_acts_as_lgtm: true
+- repos:
+  - openshift-kni/performance-addon-operators
   review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
@@ -1675,6 +1696,34 @@ plugins:
   - lgtm
   - shrug
   - trigger
+  openshift-kni/performance-addon-operators:
+  - assign
+  - blunderbuss
+  - blockade
+  - bugzilla
+  - cat
+  - dog
+  - heart
+  - golint
+  - goose
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - pony
+  - retitle
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - owners-label
+  - wip
+  - yuks
+  - approve
   openshift-priv:
   - assign
   - blockade
