Fixing incorrect namespace name

--- a/core-services/release-controller/admin_config_updater_rbac-ppc64le.yaml
+++ b/core-services/release-controller/admin_config_updater_rbac-ppc64le.yaml
@@ -124,7 +124,7 @@ items:
   apiVersion: rbac.authorization.k8s.io/v1
   metadata:
     name: config-updater
-    namespace: ci-releaseppc64le
+    namespace: ci-release-ppc64le
   roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: Role
