--- a/ci-operator/config/openshift/library-go/openshift-library-go-master.yaml
+++ b/ci-operator/config/openshift/library-go/openshift-library-go-master.yaml
@@ -29,23 +29,25 @@ tests:
     make verify -k --warn-undefined-variables
   container:
     from: bin
+- as: verify-deps
+  commands: |
+    make verify-deps -k --warn-undefined-variables
+  container:
+    from: bin
 - as: verify-alpha-build-machinery
   commands: |
-    HOME=$( mktemp -d )
     make -C alpha-build-machinery/ verify -k --warn-undefined-variables
   container:
     from: src
 - artifact_dir: /tmp/artifacts
   as: unit
   commands: |
-    mkdir -p /tmp/artifacts
     make test-unit JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
   container:
     from: test-bin
 - artifact_dir: /tmp/artifacts
   as: e2e-aws-encryption
   commands: |
-    mkdir -p /tmp/artifacts
     make test-e2e-encryption JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
   openshift_installer_src:
     cluster_profile: aws
