--- a/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
+++ b/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
@@ -4,7 +4,7 @@ tag_specification:
 promotion:
   cluster: https://api.ci.openshift.org
   namespace: openshift
-  name: knative-v0.1230.0
+  name: knative-nightly
 base_images:
   base:
     name: '4.2'
