--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -316,6 +316,18 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
+    ci-operator/config/openshift/cluster-logging-operatator/openshift-cluster-logging-operator-feature*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-misc-configs
+    ci-operator/config/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-misc-configs
     ci-operator/config/openshift/kubernetes/*.yaml:
       clusters:
         default:
@@ -471,6 +483,16 @@ config_updater:
         default:
         - ""
       gzip: true
+      name: job-config-misc
+    ci-operator/jobs/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
+      clusters:
+        default:
+        - ""
+      name: job-config-misc
+    ci-operator/jobs/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+      clusters:
+        default:
+        - ""
       name: job-config-misc
     ci-operator/jobs/openshift/kubernetes/*.yaml:
       clusters:
