Added missing plugin for remote-libvirt to prow config.

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -571,6 +571,12 @@ config_updater:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-ovirt-e2e
+    ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: prow-job-cluster-launch-installer-remote-libvirt-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml:
       clusters:
         ci/api-build01-ci-devcluster-openshift-com:6443:
