--- a/ci-operator/config/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master.yaml
+++ b/ci-operator/config/openshift-priv/ci-experiment-origin/openshift-priv-ci-experiment-origin-master.yaml
@@ -19,12 +19,12 @@ base_images:
     name: "4.4"
     namespace: ocp
     tag: oc-rpms
-binary_build_commands: make build WHAT='vendor/k8s.io/kubernetes/cmd/hyperkube'
+binary_build_commands: make build
 build_root:
   image_stream_tag:
     name: release
     namespace: openshift
-    tag: golang-1.12
+    tag: golang-1.13
 canonical_go_repository: "github.com/openshift/origin"
 images:
 - dockerfile_path: images/hyperkube/Dockerfile.rhel
