--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -761,6 +761,11 @@ periodics:
       command:
       - applyconfig
       env:
+      - name: build01_build01_reg_auth_value
+        valueFrom:
+          secretKeyRef:
+            key: build01_build01_reg_auth_value.txt
+            name: build-farm-credentials
       - name: build01_ci_reg_auth_value
         valueFrom:
           secretKeyRef:
