--- a/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
@@ -17,6 +17,11 @@ postsubmits:
         command:
         - applyconfig
         env:
+        - name: build01_build01_reg_auth_value
+          valueFrom:
+            secretKeyRef:
+              key: build01_build01_reg_auth_value.txt
+              name: build-farm-credentials
         - name: build01_ci_reg_auth_value
           valueFrom:
             secretKeyRef:
@@ -117,6 +122,11 @@ postsubmits:
         command:
         - applyconfig
         env:
+        - name: build01_build01_reg_auth_value
+          valueFrom:
+            secretKeyRef:
+              key: build01_build01_reg_auth_value.txt
+              name: build-farm-credentials
         - name: build01_ci_reg_auth_value
           valueFrom:
             secretKeyRef:
