--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -66,6 +66,11 @@ presubmits:
         command:
         - applyconfig
         env:
+        - name: build01_build01_reg_auth_value
+          valueFrom:
+            secretKeyRef:
+              key: build01_build01_reg_auth_value.txt
+              name: build-farm-credentials
         - name: build01_ci_reg_auth_value
           valueFrom:
             secretKeyRef:
@@ -198,6 +203,11 @@ presubmits:
         command:
         - applyconfig
         env:
+        - name: build01_build01_reg_auth_value
+          valueFrom:
+            secretKeyRef:
+              key: build01_build01_reg_auth_value.txt
+              name: build-farm-credentials
         - name: build01_ci_reg_auth_value
           valueFrom:
             secretKeyRef:
