Pull any image by SA build01 in each cluster

--- a/clusters/build-clusters/01_cluster/openshift/ci-operator/regcred_secret_template.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/ci-operator/regcred_secret_template.yaml
@@ -5,7 +5,7 @@ objects:
   kind: Secret
   metadata:
     annotations:
-      openshift.io/description: This secret is contains the pull secret for api.ci cluster and is used by ci-operator pod to pull image
+      openshift.io/description: This secret contains the pull secret for api.ci cluster and is used by ci-operator pod to pull image
     name: regcred
     namespace: ${namespace}
   stringData:
@@ -14,6 +14,9 @@ objects:
         "auths": {
           "registry.svc.ci.openshift.org": {
             "auth": "${build01_ci_reg_auth_value}"
+          },
+          "default-route-openshift-image-registry.apps.build01.ci.devcluster.openshift.com": {
+            "auth": "${build01_build01_reg_auth_value}"
           }
         }
       }
@@ -24,4 +27,7 @@ parameters:
   value: ci
 - description: ci registry auth value for build01
   name: build01_ci_reg_auth_value
+  required: true
+- description: build01 registry auth value for build01
+  name: build01_build01_reg_auth_value
   required: true
