--- a/clusters/build-clusters/01_cluster/openshift/ci-operator/admin_build01_rbac.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/ci-operator/admin_build01_rbac.yaml
@@ -7,6 +7,7 @@ metadata:
   name: build01
   namespace: ci
 ---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   annotations:
