installer: Override cli image reference

--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.4.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.4.yaml
@@ -3,6 +3,10 @@ base_images:
     name: "4.4"
     namespace: ocp
     tag: base
+  cli:
+    name: "4.4"
+    namespace: ocp
+    tag: cli
 build_root:
   image_stream_tag:
     name: release
@@ -40,6 +44,10 @@ images:
       as:
       - builder
       paths: null
+    cli:
+      as:
+      - cli
+      paths: null 
   to: upi-installer
 - dockerfile_path: images/openstack/Dockerfile.ci
   from: base
@@ -48,6 +56,10 @@ images:
       as:
       - builder
       paths: null
+    cli:
+      as:
+      - cli
+      paths: null 
   to: openstack-installer
 - dockerfile_path: images/baremetal/Dockerfile.ci
   from: base
