Add CI job for Openshift-kni baremetal performance

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -22,6 +22,10 @@ tests:
     commands: cd features && export FEATURES=sctp && make deploy && make functests
     openshift_installer_src:
       cluster_profile: aws
+  - as: performance-e2e-aws
+    commands: cd features && export FEATURES=performance && make deploy && make functests
+    openshift_installer_src:
+      cluster_profile: aws      
   - as: unit-tests
     commands: cd features && make unittests
     container:
