Add svc dns to regcred secret
```bash
$ oc get secret  1784163-dockercfg-h9gtt -o json | jq -r '.data.".dockercfg"' | base64 -d | jq -r 'keys[]'
172.30.113.112:5000
docker-registry.default.svc.cluster.local:5000
docker-registry.default.svc:5000
registry.svc.ci.openshift.org

$ oc get secret --kubeconfig build01.config  builder-dockercfg-gqmw7 -o json | jq -r '.data.".dockercfg"' | base64 -d | jq -r 'keys[]'
172.30.235.255:5000
image-registry.openshift-image-registry.svc.cluster.local:5000
image-registry.openshift-image-registry.svc:5000

```

--- a/clusters/build-clusters/01_cluster/openshift/ci-operator/regcred_secret_template.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/ci-operator/regcred_secret_template.yaml
@@ -15,7 +15,19 @@ objects:
           "registry.svc.ci.openshift.org": {
             "auth": "${build01_ci_reg_auth_value}"
           },
+          "docker-registry.default.svc.cluster.local:5000": {
+            "auth": "${build01_ci_reg_auth_value}"
+          },
+          "docker-registry.default.svc:5000": {
+            "auth": "${build01_ci_reg_auth_value}"
+          },
           "default-route-openshift-image-registry.apps.build01.ci.devcluster.openshift.com": {
+            "auth": "${build01_build01_reg_auth_value}"
+          },
+          "image-registry.openshift-image-registry.svc.cluster.local:5000": {
+            "auth": "${build01_build01_reg_auth_value}"
+          },
+          "image-registry.openshift-image-registry.svc:5000": {
             "auth": "${build01_build01_reg_auth_value}"
           }
         }
