Move to using ci-job make target over unittests
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
+++ b/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
@@ -39,8 +39,8 @@ tag_specification:
   name: "4.4"
   namespace: ocp
 tests:
-- as: unit-tests
-  commands: make unittests
+- as: ci
+  commands: make ci-job
   container:
     from: src
 - as: e2e-gcp
