Use golang1.13 as base image
Use golang 1.13 as base image for tektoncd-cli,
tektoncd-pipeline, tektoncd-catalog repo

--- a/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
@@ -4,7 +4,7 @@ tag_specification:
 
 promotion:
   namespace: openshift
-  name: release-next
+  name: tektoncd-next
 
 base_images:
   base:
@@ -13,8 +13,10 @@ base_images:
     tag: base
 
 build_root:
-  project_image:
-    dockerfile_path: openshift/Dockerfile
+  image_stream_tag:
+    name: release
+    namespace: openshift
+    tag: golang-1.13
 
 images:
 - dockerfile_path: Dockerfile
@@ -25,10 +27,6 @@ images:
       - destination_dir: .
         source_path: /go/src/github.com/openshift/tektoncd-catalog/s2i/.
   to: tektoncd-catalog-s2i
-
-promotion:
-  namespace: openshift
-  name: tektoncd-next
 
 tests:
 - as: e2e
