Revert "Request more MEM on origin's artifacts job"
This reverts commit c9ec53e2ae3a8d9bbd7c95ca044d393defdf55c7.

--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -116,10 +116,10 @@ resources:
       memory: 4Gi
   artifacts:
     limits:
-      memory: 6Gi
+      memory: 4Gi
     requests:
-      cpu: 500m
-      memory: 3Gi
+      cpu: 100m
+      memory: 100Mi
   bin:
     limits:
       memory: 12Gi
